# oda-api-ri-rust

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
tmf634/: Cargo.toml  README.md
tmf634/client/src/: main.rs
tmf634/docs/: Addressable.md  Attachment.md  AttachmentRef.md  AttachmentRefOrValue.md  CharacteristicSpecificationBase.md  CharacteristicValueSpecification.md  ConnectionPointSpecificationRef.md  ConnectionSpecification.md  ConstraintRef.md  EndpointSpecificationRef.md  Entity.md  EntityRef.md  Error.md  EventSubscription.md  EventSubscriptionInput.md  ExportJob.md  ExportJobCreate.md  ExportJobCreateEvent.md  ExportJobCreateEventPayload.md  ExportJobStateChangeEvent.md  ExportJobStateChangeEventPayload.md  Extensible.md  FeatureSpecification.md  FeatureSpecificationCharacteristic.md  FeatureSpecificationCharacteristicRelationship.md  FeatureSpecificationRelationship.md  ImportJob.md  ImportJobCreate.md  ImportJobCreateEvent.md  ImportJobCreateEventPayload.md  ImportJobStateChangeEvent.md  ImportJobStateChangeEventPayload.md  LogicalResourceSpecification.md  PhysicalResourceSpecification.md  Quantity.md  RelatedParty.md  ResourceCandidate.md  ResourceCandidateChangeEvent.md  ResourceCandidateChangeEventPayload.md  ResourceCandidateCreate.md  (+52 more)
tmf634/server/src/: main.rs  server.rs
tmf634/server/tests/: integration_test.rs
tmf639/: Cargo.toml
tmf639/client/src/: main.rs
tmf639/server/src/: main.rs  server.rs
