[package]
name = "oda_ri_tmf634"
version = "0.1.0"
edition = "2021"

# Executable crate

[[bin]]
name = "tmf634_client"
path = "client/src/main.rs"
required-features = ["client"]

[[bin]]
name = "tmf634_server"
path = "server/src/main.rs"
required-features = ["server"]

[[test]]
name = "integration_server_test"
path = "server/tests/integration_test.rs"
required-features = ["server"]

[features]
default = ["client", "server"]
client = [
    "hyper", "hyper-openssl", "hyper-tls", "native-tls", "openssl", "url"
]
server = [
   "serde_ignored", "hyper", "regex", "percent-encoding", "url", "lazy_static"
]
conversion = ["frunk", "frunk_derives", "frunk_core", "frunk-enum-core", "frunk-enum-derive"]

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "ios"))'.dependencies]
native-tls = { version = "0.2", optional = true }
hyper-tls = { version = "0.5", optional = true }

[target.'cfg(not(any(target_os = "macos", target_os = "windows", target_os = "ios")))'.dependencies]
hyper-openssl = { version = "0.9", optional = true }
openssl = {version = "0.10", optional = true }

[dependencies]
# Rust SDK
oda_sdk_tmf634 = { path = "../../oda-api-sdk-rust/tmf634" }

# Common
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
log = "0.4.0"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Crates included if required by the API definition

# Common between server and client features
hyper = {version = "0.14", features = ["full"], optional = true}
serde_ignored = {version = "0.1.1", optional = true}
url = {version = "2.1", optional = true}

# Client-specific

# Server, and client callback-specific
lazy_static = { version = "1.4", optional = true }
percent-encoding = {version = "2.1.0", optional = true}
regex = {version = "1.3", optional = true}

# Conversion
frunk = { version = "0.3.0", optional = true }
frunk_derives = { version = "0.3.0", optional = true }
frunk_core = { version = "0.3.0", optional = true }
frunk-enum-derive = { version = "0.2.0", optional = true }
frunk-enum-core = { version = "0.2.0", optional = true }

tokio = { version = "1.14", features = ["full"] }
openssl = "0.10"
hyper-openssl = { version = "0.9", optional = true }
clap = "2.25"
env_logger = "0.7"
native-tls = "0.2"
tokio-openssl = "0.6"
redis = { version = "0.23.3", features = ["json", "tokio-comp"] }
uuid = { version = "1.6.1", features = ["v7"] }

[dev-dependencies]
reqwest = "0.11"
