[package]
name = "oda_ri_tmf634"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmf634_server"
path = "server/src/main.rs"
required-features = ["server"]

[[test]]
name = "integration_server_test"
path = "server/tests/integration_test.rs"

[features]
default = ["server"]
server = ["hyper"]

[dependencies]
# Rust SDK
oda_sdk_tmf634 = { path = "../../oda-api-sdk-rust/tmf634" }
# Common
async-trait = "0.1.24"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
log = "0.4.0"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1.14", features = ["full"] }
openssl = "0.10"
clap = "2.25"
env_logger = "0.7"
tokio-openssl = "0.6"
redis = { version = "0.23.3", features = ["json", "tokio-comp"] }
uuid = { version = "1.6.1", features = ["v7"] }

[dev-dependencies]
reqwest = "0.11"
